# VibeMouse.app

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  THIRD_PARTY_NOTICES.md  VibeMouse.spec  entitlements.plist  pyproject.toml
.github/workflows/: build.yml  ci.yml
docs/: index.html
scripts/: build_and_notarize.sh  build_app.sh  download_model.py
tests/: test_app.py  test_audio.py  test_audio_feedback.py  test_config.py  test_deploy.py  test_doctor.py  test_macos_app_delegate.py  test_macos_config_bridge.py  test_macos_launchagent.py  test_main.py  test_mouse_listener.py  test_output.py  test_sensevoice_onnx.py  test_system_integration.py
vibemouse/: app.py  audio.py  audio_feedback.py  config.py  deploy.py  doctor.py  macos_entry.py  main.py  mouse_listener.py  output.py  sensevoice_onnx.py  system_integration.py  transcriber.py
vibemouse/macos/: app_delegate.py  config_bridge.py  launchagent.py  model_downloader.py  permissions.py
vibemouse/macos/resources/: VibeMouse.icns
vibemouse/models/SenseVoiceSmall/: model_quant.onnx
